--- a/src/src/app.scss
+++ b/src/src/app.scss
@@ -7,10 +7,26 @@
     box-sizing: border-box;
 }
 
+body {
+    font-family: var(--font-family-base);
+    color: var(--color-base-content);
+    background-color: var(--color-base-100);
+    margin: 0;
+    padding: 0;
+    line-height: 1.6;
+}
+
 .imgStyle {
+    padding: 30px 0;
     img {
         max-width: 100%;
         height: auto;
-        border: 10px solid #f00; /* Tailwind's gray-100 */
+        border-radius: var(--spacing-4);
+    }
+}
+
+.bend-parallax {
+    .parallax-content {
+        border-radius: var(--spacing-4);
     }
 }
